typescript/checker/tests/conformance/expressions/identifiers/scopeResolutionIdentifiers.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            149,
        ),
        hi: BytePos(
            150,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/identifiers/scopeResolutionIdentifiers.ts:3:5
  |
3 | var s: string;
  |     ^

